// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuVertical body renders without regressions 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1tobc0i-MenuVertical{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding-bottom:0.809rem;padding-top:1.618rem;display:none;}",
      }
    }
    data-emotion="css 1tobc0i-MenuVertical"
  />
  <div
    className="css-1tobc0i-MenuVertical"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-1mgyam6{-webkit-text-decoration:none;text-decoration:none;font-size:1rem;font-weight:medium;background:none;}",
        }
      }
      data-emotion="css 1mgyam6"
    />
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-t9hu3x{color:#2C8127;-webkit-text-decoration:none;text-decoration:none;background-image:linear-gradient(
    to top,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0) 1px,
    currentColor 1px,
    currentColor 2px,
    rgba(0, 0, 0, 0) 2px
  );-webkit-text-decoration:none;text-decoration:none;font-size:1rem;font-weight:medium;background:none;}.css-t9hu3x:hover{background-image:none;-webkit-filter:brightness(1.3);filter:brightness(1.3);}",
        }
      }
      data-emotion="css t9hu3x"
    />
    <a
      className="css-t9hu3x"
      href="/path-1"
    >
      title-1
    </a>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-l1p1i0-Separator{height:0.5rem;color:white;cursor:default;}",
        }
      }
      data-emotion="css l1p1i0-Separator"
    />
    <span
      className="css-l1p1i0-Separator"
    >
       
    </span>
    <a
      className="css-t9hu3x"
      href="/path-2"
    >
      title-2
    </a>
  </div>
</div>
`;

exports[`MenuVertical head renders without regressions 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-50n0xx-MenuVertical{cursor:pointer;color:#2C8127;border:1px solid #2C8127;padding:0.5rem;background-color:transparent;}.css-50n0xx-MenuVertical:focus{outline:0;}",
      }
    }
    data-emotion="css 50n0xx-MenuVertical"
  />
  <button
    className="css-50n0xx-MenuVertical"
    onClick={[Function]}
  >
    Menu
  </button>
</div>
`;

exports[`MenuVertical opened body renders without regressions 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1icg5sk-MenuVertical{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding-bottom:0.809rem;padding-top:1.618rem;}",
      }
    }
    data-emotion="css 1icg5sk-MenuVertical"
  />
  <div
    className="css-1icg5sk-MenuVertical"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-1mgyam6{-webkit-text-decoration:none;text-decoration:none;font-size:1rem;font-weight:medium;background:none;}",
        }
      }
      data-emotion="css 1mgyam6"
    />
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-t9hu3x{color:#2C8127;-webkit-text-decoration:none;text-decoration:none;background-image:linear-gradient(
    to top,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0) 1px,
    currentColor 1px,
    currentColor 2px,
    rgba(0, 0, 0, 0) 2px
  );-webkit-text-decoration:none;text-decoration:none;font-size:1rem;font-weight:medium;background:none;}.css-t9hu3x:hover{background-image:none;-webkit-filter:brightness(1.3);filter:brightness(1.3);}",
        }
      }
      data-emotion="css t9hu3x"
    />
    <a
      className="css-t9hu3x"
      href="/path-1"
    >
      title-1
    </a>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-l1p1i0-Separator{height:0.5rem;color:white;cursor:default;}",
        }
      }
      data-emotion="css l1p1i0-Separator"
    />
    <span
      className="css-l1p1i0-Separator"
    >
       
    </span>
    <a
      className="css-t9hu3x"
      href="/path-2"
    >
      title-2
    </a>
  </div>
</div>
`;

exports[`MenuVertical opened head renders without regressions 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-nf73zk-MenuVertical{cursor:pointer;color:#2C8127;border:1px solid #2C8127;padding:0.5rem;background-color:transparent;color:white;border:1px solid white;background-color:#2C8127;background:repeating-linear-gradient(
      45deg,
      #3CB534,
      #3CB534 10px,
      #2C8127 10px,
      #2C8127 20px
    );opacity:0.9;}.css-nf73zk-MenuVertical:focus{outline:0;}",
      }
    }
    data-emotion="css nf73zk-MenuVertical"
  />
  <button
    className="css-nf73zk-MenuVertical"
    onClick={[Function]}
  >
    Menu
  </button>
</div>
`;
